# drv-synopsys-mipi

./: Kconfig  meson.build  meson.options  requirements.txt
configs/: defconfig
dts/: default.dts
include/: meson.build
include/mipi/: meson.build  mipi_dsi.h  mipi_dsi_host.h
src/: meson.build  mipi_dphy.h  mipi_dsi.c  mipi_dsi_bias.h  mipi_dsi_defs.h  mipi_dsi_dt.c.in  mipi_dsi_host.c  mipi_dsi_priv.h  mipi_dsi_wrapper.h
subprojects/: drv-stm32-ltdc.wrap
