option('dts', type: 'string', description: 'Device tree file to use', yield: true)
option('dts-include-dirs', type: 'array', yield: true,
       description: 'Directories to add to resolution path for dtsi inclusion')
option('config', type: 'string', description: 'Configuration file to use', yield: true)
# option('with_doc', type: 'boolean', value: false, description: 'trigger the sphinx documentation build')
# option('with_tests', type: 'boolean', value: false, description: 'with unit tests')
